crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_a_u001f_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<a\u001f>\"####)"
---
[
    Token {
        data: "a\u{1f}",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a\u{1f}",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
